Archive2/24/cfaa3e4eb0ad08/output
main.cpp: In function 'void Shareify(Func)':
main.cpp:16:18: error: expected unqualified-id before '(' token
     shared_func->("hello");
                  ^
